<resources>
    <string name="app_name">Jarvis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <!--Tela de Login-->

    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="button_login">LOG IN</string>
    <string name="button_new_user">CREATE NEW USER</string>
    <string name="button_facebook">LOGIN WITH FACEBOOK</string>
    <string name="button_twitter">LOGIN WITH TWITTER</string>
    <string name="button_google">LOGIN WITH GOOGLE</string>

    <!--Tela de Cadastro-->
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_register">REGISTER USER</string>

    <!--Tela de procura / Main -->
    <string name="nome_personagem">Wolverine</string>
    <string name="personagens_encontrados">All results...</string>
    <string name="top_personagens">Top character...</string>
    <string name="QuizIntro">JarvidDB needs your help! There was a great battle near its main framework and some of his data was corrupt. Answer the question in the quiz to help JarvisDB recovery the lost information!</string>

    <!--Tela de Favoritos -->
    <string name="seus_favoritos">Your Favorites</string>
    <string name="nome_hq">X-FORCE</string>

    <!--Drawer -->
    <string name="menu_home">Home</string>
    <string name="Login">Login</string>
    <string name="Quiz">Quiz</string>
    <string name="Favoritos">Favorites</string>
    <string name="Home">Home</string>
    <string name="Or">Or</string>
    <string name="QuizTitle">Quiz</string>
    <string name="Progress">Your progresss</string>
    <string name="Rank">Janitor</string>
    <string name="StartQuiz">Start!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stories_fav">Stories</string>
    <string name="series_fav">Series</string>
    <string name="comics_fav">Comics</string>
    <string name="personagens_fav">Characters</string>
    <string name="Logout">Logout</string>
    <string name="atribuicao_Marvel">Data provided by Marvel. © 2014 Marvel</string>


</resources>
