<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg15_opc_blur_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/et_cadastro_email"
                style="@style/fonteSecundaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="11dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_cadastro_password"
                style="@style/fonteSecundaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_cadastro_password_confirm"
                style="@style/fonteSecundaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/et_cadastro_birth"
                style="@style/fonteSecundaria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/prompt_birthday"
                android:inputType="date"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btn_cadastro_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                android:backgroundTint="#5DB44F"
                android:hint="@string/prompt_register"
                android:textColorHint="@color/white"
                style="@style/fontePrincipal"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>