<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@drawable/bkg1"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#C5CFD1"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtQuizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/QuizTitle"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    android:textSize="26dp"
                    android:textStyle="bold"
                    style="@style/fontePrincipal"
                    />

                <TextView
                    android:id="@+id/txtQuizIntro"
                    android:justificationMode="inter_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/QuizIntro"
                    android:textColor="#000"
                    style="@style/fonteLeitura"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#C5CFD1"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/txtPTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/fontePrincipal"
                    android:text="@string/Progress"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivPIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_nv1"
                        app:srcCompat="@drawable/ic_nv1"
                        app:tint="@color/black"
                        />

                    <TextView
                        android:id="@+id/PRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/fonteLeitura"
                        android:text="@string/Rank"
                        android:textColor="#000"
                        android:textSize="18dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/pbProgress"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight=".7"
                        android:indeterminate="false"
                        android:outlineSpotShadowColor="@color/white"
                        android:outlineAmbientShadowColor="@color/white"
                        android:progressBackgroundTint="@color/white"
                        android:progress="80"
                        android:progressTint="#33ff99" />

                    <TextView
                        android:id="@+id/txtProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/fonteLeitura"
                        android:text="(80/100)" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtProgressAch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:justificationMode="inter_word"
                        android:text="20/10/2020 - Titulo: Entusiata intergalatico"
                        style="@style/fonteLeitura"/>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#9D152C"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/StartQuiz"
            style="@style/fontePrincipal"
            />

    </LinearLayout>


</FrameLayout>